# ftxpath

./: .gitignore  CMakeLists.txt  Generator.cpp  LICENSE  README.md  libpath.cpp  libpath.h  split.cpp  split.h
src/: CMakeLists.txt  Generator.cpp  Generator.h  ftxpath.cpp  ftxpath.h  libpath.cpp  libpath.h  split.cpp  split.h
test/: CMakeLists.txt  main.cpp  test_abspath.cpp  test_abspath.h  test_basename.cpp  test_basename.h  test_chdir.cpp  test_chdir.h  test_commonprefix.cpp  test_commonprefix.h  test_cwd.cpp  test_cwd.h  test_dirname.cpp  test_dirname.h  test_exists.cpp  test_exists.h  test_isabs.cpp  test_isabs.h  test_isdir.cpp  test_isdir.h  test_isfile.cpp  test_isfile.h  test_join.cpp  test_join.h  test_listdir.cpp  test_listdir.h  test_makedirs.cpp  test_makedirs.h  test_normpath.cpp  test_normpath.h  test_relpath.cpp  test_relpath.h  test_rmtree.cpp  test_rmtree.h  test_split.cpp  test_split.h  test_splitdrive.cpp  test_splitdrive.h  test_splitext.cpp  test_splitext.h  (+3 more)
toolchain/: android.toolchain.cmake  ios.cmake
